--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node ./server.js",
-    "start:dev": "nodemon ./server.js",
-    "build": "webpack --config webpack.config.js --mode=production",
-    "start:prod": "webpack --config webpack.config.js --mode=production && node ./dist/server.js",
+    "start": "nodemon -e ts --watch src .env --exec \"tsc --incremental && ts-node src/server.ts\"",
+    "start:dev": "nodemon --exec ts-node ./src/server.ts",
+    "build": "tsc",
+    "start:prod": "npm run build && node dist/index.js",
+    "start:webpack": "node ./server.js",
+    "start:dev-webpack": "nodemon ./server.js",
+    "build:webpack": "webpack --config webpack.config.js --mode=production",
+    "start:prod-webpack": "webpack --config webpack.config.js --mode=production && node ./dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -34,12 +38,15 @@
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
+    "@types/ws": "^8.5.5",
     "@webpack-cli/generators": "^3.0.7",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^2.8.8",
     "style-loader": "^3.3.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
   }
