--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
     "mini-css-extract-plugin": "^2.7.6",
+    "nodemon": "^3.0.1",
     "prettier": "^2.8.8",
     "style-loader": "^3.3.3",
     "ts-node": "^10.9.1",
